--- a/ui/characterList/src/main/res/values/strings.xml
+++ b/ui/characterList/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="cd_character_image">Character image</string>
+    <string name="cd_back">Back</string>
+    <string name="characters">Characters</string>
+
 </resources>
