Updates to home frag

--- a/ui/home/src/main/res/values/strings.xml
+++ b/ui/home/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="locations">Locations</string>
     <string name="cd_characters_image">Characters image</string>
     <string name="cd_episode_image">Episode image</string>
+    <string name="cd_location_image">Location image</string>
 </resources>
