Updates to CDF UI

--- a/ui/character/characterDetails/src/main/res/values/strings.xml
+++ b/ui/character/characterDetails/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
 
     <string name="cd_back">Back</string>
     <string name="cd_character_image">Character image</string>
+    <string name="cd_gender">Gender</string>
+    <string name="cd_species">Species</string>
 
 </resources>
