--- a/ui-character-details/src/main/res/values/strings.xml
+++ b/ui-character-details/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="cd_character_image">Character image</string>
     <string name="cd_gender">Gender</string>
     <string name="cd_species">Species</string>
+    <string name="location">Location</string>
+    <string name="origin">Origin</string>
+    <string name="episodes">Episodes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
